add achievement score

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/xl-pmgm.ico" />
+    <meta charSet="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="title" content="PMGM | XL Axiata" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Performance Management System - XL Axiata"
     />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://performance.xl.co.id/" />
+    <meta property="og:title" content="PMGM | XL Axiata" />
+    <meta
+      property="og:description"
+      content="Performance Management System - XL Axiata"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/xl-pmgm.ico" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://performance.xl.co.id/" />
+    <meta
+      property="twitter:title"
+      content="PMGM | XL Axiata"
+    />
+    <meta
+      property="twitter:description"
+      content="Performance Management System - XL Axiata"
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/xl-pmgm.ico"
+    />
+    <meta name="theme-color" content="#fff" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
