--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="Performance Management System - XL Axiata"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/xl-pmgm.ico" />
+    <meta property="og:image" content="https://i.ibb.co/J7V3cmf/pmgm.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://performance.xl.co.id/" />
@@ -32,7 +32,7 @@
     />
     <meta
       property="twitter:image"
-      content="%PUBLIC_URL%/xl-pmgm.ico"
+      content="https://i.ibb.co/J7V3cmf/pmgm.png"
     />
     <meta name="theme-color" content="#fff" />
     <link rel="apple-touch-icon" href="logo192.png" />
