--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="%REACT_APP_API_URL%">
-    <link rel="preload" href="%REACT_APP_API_URL%">
+    <link rel="preload" href="%REACT_APP_API_URL%" as="fetch">
     <link rel="dns-prefetch" href="%REACT_APP_API_URL%">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
