fix (code) : prefetch

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="%REACT_APP_API_URL%">
-    <link rel="preload" href="%REACT_APP_API_URL%" as="fetch">
-    <link rel="dns-prefetch" href="%REACT_APP_API_URL%">
+    <link rel="preconnect" href="%REACT_APP_API_URL%/user/photo/aaaa">
+    <link rel="preload" href="%REACT_APP_API_URL%/user/photo/aaaa" as="fetch">
+    <link rel="dns-prefetch" href="%REACT_APP_API_URL%/user/photo/aaaa">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
